--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ name = "pypi"
 jupyter = "*"
 jupyterlab = "*"
 pandas = "*"
+xlrd = "*"
+numpy = "*"
+matplotlib = "*"
+pylab = "*"
 
 [dev-packages]
 
